# datex-embedded

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml.example
.github/workflows/: publish.yml  release.yml  version-bump.yml
crates/datex-embedded/: Cargo.toml
crates/datex-embedded-macros/: Cargo.toml
crates/datex-embedded-macros/src/: lib.rs
crates/datex-embedded/src/esp/: init.rs
crates/datex-embedded/src/interfaces/: websocket_client_interface_embedded.rs
crates/datex-embedded/src/setup/: network_time.rs
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: fmt.sh
src/: lib.rs
src/esp/: context.rs  esp_crypto.rs  esp_time.rs  global_context.rs  global_initializer.rs  init.rs  mod.rs  rng.rs  timestamp_generator.rs  wifi.rs
src/hal/: rng.rs
src/interfaces/: mod.rs  tcp_client_interface_embedded.rs  websocket_client_interface_embedded.rs  websocket_client_interface_esp.rs
src/setup/: global_initializer.rs  mod.rs  network.rs  network_time.rs
