[package]
name = "datex-core-embedded"
version = "0.1.0"
edition = "2024"

[dependencies]
datex-core = { path = "../datex-core", default-features = false, features = ["embedded"] }
datex_macros = { path = "../datex-core/macros" }
datex-core-embedded-macros = { path = "./macros" }

log = "0.4.27"
embassy-net = { version = "0.7.0", default-features = false, features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
  "proto-ipv4",
  # note: ipv6 does currently lead to compiler error
] }
embedded-io = "0.7.1"
embedded-io-async = { version = "0.7.0", features = ["alloc"] }
embassy-executor = { version = "0.9.0", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
edge-net = { version = "0.11.2" }
edge-nal-embassy = { version = "0.6.0", default-features = false, features = ["dns", "tcp", "proto-ipv4"] }
edge-http = "0.6.1"
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
static_cell = "2.1.1"
jiff = { version = "0.2.10", default-features = false, features = ["static"] }
sntpc = { version = "0.6.0", default-features = false, features = [
    "embassy-socket",
] }

# websocket dependencies
url = { version = "2.5.7", default-features = false, optional = true }

# esp dependencies
esp-hal = { version = "=1.0.0-rc.1", optional = true, features = [
  "esp32s3",
  "log-04",
  "unstable",
  "psram",
] }
esp-rtos = { version = "0.1.1", optional = true, features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
  "log-04",
] }
esp-bootloader-esp-idf = { version = "0.3.0", optional = true }
esp-alloc = {version = "0.9.0", optional = true}
esp-radio = { version = "0.16.0", optional = true, features = [
  "ble",
  "coex",
  "esp-alloc",
  "log-04",
  "smoltcp",
  "unstable",
] }


[features]
default = []

debug = [
    "datex-core/debug"
]

websocket-client = [
    "dep:url",
    "wifi"
]

wifi = [
    "esp-radio/wifi"
]

esp = [
    "dep:esp-hal",
    "dep:esp-rtos",
    "dep:esp-bootloader-esp-idf",
    "dep:esp-alloc",
    "dep:esp-radio",
    "datex-core/esp_logger"
]

esp32s2 = [
    "esp",
    "esp-bootloader-esp-idf/esp32s3",
    "esp-radio/esp32s3"
]