[package]
name = "datex-embedded"
version = "0.1.0"
edition = "2024"

[dependencies]
datex-core = { git = "https://github.com/unyt-org/datex", branch = "refactor/update-loop", default-features = false, features = [
    "allow_unsigned_blocks", # TODO: remove once crypto is fully implemented for embedded
] }
datex-macros = { git = "https://github.com/unyt-org/datex", branch = "refactor/update-loop" }
datex-embedded-macros = { path = "./macros" }

log = "0.4.27"
embassy-net = { version = "0.8.0", default-features = false, features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
  "proto-ipv4",
  # note: ipv6 does currently lead to compiler error
] }
embedded-io = "0.7.1"
embedded-io-async = { version = "0.7.0", features = ["alloc"] }
embassy-executor = { version = "0.9.0", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
edge-net = { version = "0.13.1", features = ["io"]}
edge-nal-embassy = { version = "0.8.1", default-features = false, features = ["dns", "tcp", "proto-ipv4"] }
edge-http = "0.7.0"
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
static_cell = "2.1.1"
jiff = { version = "0.2.10", default-features = false, features = ["static"] }
sntpc = { version = "0.8.1", default-features = false }

# websocket dependencies
url = { version = "2.5.7", default-features = false, optional = true }

# esp dependencies
esp-hal = { version = "1.0.0", optional = true, features = [
  "log-04",
  "unstable",
  "psram",
] }
esp-rtos = { version = "0.2.0", optional = true, features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "log-04",
] }
esp-bootloader-esp-idf = { version = "0.4.0", optional = true }
esp-alloc = {version = "0.9.0", optional = true}
esp-radio = { version = "0.17.0", optional = true, features = [
  "ble",
  "coex",
  "esp-alloc",
  "log-04",
  "smoltcp",
  "unstable",
] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
esp-println = "0.16.1"
futures = { version = "0.3.31", default-features = false, features = ["alloc", "async-await"]}
sntpc-net-embassy = "0.8.0"


[features]
default = ["tcp-client", "esp32s3"]


websocket-client = [
    "dep:url",
    "wifi",
]

tcp-client = [
    "dep:url",
    "wifi",
]

wifi = [
    "esp-radio/wifi"
]

esp = [
    "dep:esp-hal",
    "dep:esp-rtos",
    "dep:esp-bootloader-esp-idf",
    "dep:esp-alloc",
    "dep:esp-radio",
    "datex-core/target_esp32"
]

esp32 = [
    "esp",
    "esp-bootloader-esp-idf/esp32",
    "esp-radio/esp32",
    "esp-hal/esp32",
    "esp-rtos/esp32",
]

esp32s3 = [
    "esp",
    "esp-bootloader-esp-idf/esp32s3",
    "esp-radio/esp32s3",
    "esp-hal/esp32s3",
    "esp-rtos/esp32s3",
]
