[package]
name = "datex-embedded-macros"
version = "0.0.1"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
cfg-if = "1.0.4"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

datex-core = { git = "https://github.com/unyt-org/datex", version = "0.0.11", branch = "feat/pointer-sync" }       # FIXME move to { version = "0.0.11", default-features = false, features = ["std", "compiler", "tokio_runtime"] } # FIXME move to 0.0.12
datex-macro-utils = { git = "https://github.com/unyt-org/datex", version = "0.0.1", branch = "feat/pointer-sync" } # FIXME move to { version = "0.0.1" }

[features]
target_esp32 = []
target_esp32s3 = []
target_esp32c2 = []
