[package]
name = "datex-embedded-macros"
version = "0.0.2"
edition = "2024"
license-file = "../../LICENSE"
description = "Macros for datex-embedded"

[lib]
proc-macro = true

[dependencies]
cfg-if = "1.0.4"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

datex-core = { version = "0.0.12", default-features = false, features = [
	"target_esp_shared",
] } # git = "https://github.com/unyt-org/datex", 
datex-macro-utils = { version = "0.0.1", default-features = false } # git = "https://github.com/unyt-org/datex", 

[features]
target_esp32 = []
target_esp32s3 = []
target_esp32c2 = []
